# automatic-speech-assessment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: linting.yaml  pre-commit.yaml  tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
latex/project_plan/: main.tex
latex/thesis/: main.tex
notebooks/: data_demo.ipynb
project_plan/: main.tex
src/asa/: data.py  train.py
tests/: test_data.py  test_dataset_manual.py
