[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "asa"
version = "0.0.1"
description = "This bachelor project studies how modern transformer-based models can be used for automatic assessment of spoken language."
authors = [
  { name = "David Lindahl", email = "s234817@dtu.dk" },
  { name = "Carl Svejstrup", email = "s234840@dtu.dk" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click<8.2",
    "fastapi==0.115.6",
    "google-cloud-storage>=3.9.0",
    "invoke>=2.2.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ruff>=0.1.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch==2.10.0",
    "torchaudio>=2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mypy==1.19.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings-python==2.0.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88

[tool.coverage.run]
omit = ["tests/*"]
